# 6403Zakharov

./: .flake8  .gitignore  6403_ЗахаровНК_Итоговый_Отчёт.docx  ARCHITECTURE.md  Pipfile  README.md  VARIANT_5_BUSINESS_DYNAMICS.md  async_main.py  cat_api_main.py  check_build.ps1  logging_config.py  main.py  pyproject.toml  requirements.txt  run_async.py  setup.py
async_cat_api/: __init__.py  __main__.py  async_processor.py
cat_api/: __init__.py  __main__.py  cat_image.py  processor.py
implementation/: __init__.py  __main__.py  image_processing.py  image_processing_custom.py
interfaces/: i_image_processing.py
lw3/: __init__.py  parquet_utils.py  pipeline.py  plots.py  run_all.py  utils.py
lw3/datasets/: __init__.py  airlines.py  business_dynamics.py  global_emissions.py  video_games.py  weather.py
lw3/output/: perf_airlines.txt  perf_business_dynamics.txt  perf_global_emissions.txt  perf_video_games.txt  perf_weather.txt
lw3/output/airlines/: airlines_summary.txt
lw3/output/business_dynamics/: bd_summary.txt
lw3/output/emissions/: emissions_summary.txt
lw3/output/video_games/: vg_summary.txt
lw3/output/weather/: weather_summary.txt
lw3/parquet/: airlines.parquet  business_dynamics.parquet  global_emissions.parquet  video_games.parquet  weather.parquet
tests/: test_all.py  test_cat_image.py  test_cat_image_processor.py
