[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zakharov_6403"
version = "0.1.0"
authors = [
  { name="Nikita Zakharov", email="nk.z4kharov@gmail.com" },
]
description = "Cat Image Processing API - Group 6403"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "opencv-python",
    "requests",
    "aiohttp",
    "aiofiles",
    "numba",
]

[project.urls]
"Homepage" = "https://github.com/CrucifiedOnTheCross/6403Zakharov"

[tool.setuptools]

packages = ["cat_api", "async_cat_api", "implementation", "interfaces"]
py-modules = ["logging_config"]